--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	        <div class="one-forth d-flex align-items-center ftco-animate js-fullheight">
 	        	<div class="text mt-5">
 	        		<span class="subheading">Best Seller Book Of The Week</span>
-		  				<h1>Clue Of The Wooden Cottage</h1>
+		  				<h1>Experience Books in New Way</h1>
 		  				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
 		  				<p><a href="#" class="btn btn-primary py-3 px-4">Buy Now For $22.78</a></p>
 	          </div>
